style.css
.food_card {
  display: flex;
  gap: 10px;
  align-items: center;
  background-color: #FDEADC;
  margin-bottom: 10px;
  border-radius: 10px;
  width: 700px;
}

#second_card_section {
  padding-left: 20px;
}

#third_card_section {
  display: flex;
  margin-left: auto;
  flex-direction: column;
  padding-right: 20px;
}

.main_section {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

.order_section {
  display: flex;
  width: 100%;
  padding-left: 50px;
  box-sizing: border-box;
  max-width: 1440px;
  margin: 0 auto;
}

.menu {
  flex: 1;
  margin-right: 100px;
  display: flex;
}

.main_header {
  background-color: #E76C1F;
  height: 100px;
  display: flex;
  justify-content: center;
}

.header_content {
  width: 100%;
  max-width: 1440px;
  height: 100px;
  display: flex;
  justify-content: space-between;
}

.header_content img {
  margin: 25px;
}

#main_logo {
  margin: 35px;
}

.menu_seperator {
  height: 50px;
  padding-left: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #E76C1F;
  margin-top: 36px;
  margin-bottom: 50px;
  width: 100%;
  color: white;
}

.menu_seperator_content {
  width: 100%;
  max-width: 1440px;
  display: flex;
  align-items: center;
  gap: 36px;
  padding-left: 64px;
}

.shop_introduction {
  margin-top: 100px;
  margin-left: 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.shop_name {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 50px;
}

.footer_links {
  width: 50%;
  max-width: 1440px;
  display: flex;
  justify-content: space-between;
}

.footer_links a {
  color: white;
  text-decoration: none;
}

.footer_links a:hover {
  text-decoration: underline;
}

.main_img_container {
  background-image: url(assets/img/main_img.png);
  width: 100%;
  height: 300px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  max-width: 1440px;
  margin: 0 auto;
}

.content_add_btn {
  width: 100px;
  height: 50px;
  background-image: url("assets/img/add_to_basket.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  border: none;
  cursor: pointer;
  background-color: #FDEADC;
}

.content_add_btn:hover {
  background-image: url("assets/img/add_to_basket_hover.svg");
}

#rating {
  display: flex;
  gap: 6px;
  background-color: #FDEADC;
  justify-content: center;
  align-items: center;
  width: fit-content;
  height: 30px;
}

.rating-count {
  color: #9a9a9a;
}

.highlight {
  color: #E76C1F;
}

.seperator {
  height: 5px;
  width: 100%;
  margin: 20px;
  border-radius: 10px;
  background-color: #FDEADC;
  box-sizing: border-box;
}

#total {
  color: #FDEADC;
  margin: 20px;
}

.mobile_footer {
  width: 100%;
  height: 50px;
  background-color: #363534;
  position: fixed;
  bottom: 0;
  left: 0;
  display: none;
}

#seperator_mobile {
  height: 5px;
  width: 90%;
  margin: 20px;
  border-radius: 10px;
  background-color: #FDEADC;
  box-sizing: border-box;
}

.mobile_btn {
  width: 30px;
  height: 30px;

  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  border: none;
  cursor: pointer;
  background-color: #363534;
}

.m_btn_home {
  background-image: url("assets/icons/mobile/home.png");
}

.m_btn_basket {
  background-image: url(assets/icons/mobile/shopping_cart.png);
}

.m_btn_orders {
  background-image: url(assets/icons/mobile/takeout_dining.png);
}

.m_btn_profile {
  background-image: url(assets/icons/mobile/person.png);
}

.m_btn_home:hover {
  background-image: url("assets/icons/mobile/aktive/home.png");
}

.m_btn_basket:hover {
  background-image: url("assets/icons/mobile/aktive/shopping_cart.png");
}

.m_btn_orders:hover {
  background-image: url("assets/icons/mobile/aktive/takeout_dining.png");
}

.m_btn_profile:hover {
  background-image: url("assets/icons/mobile/aktive/person.png");
}

.mobile_menu {
  display: flex;
  justify-content: space-around;
  margin: 10px;
}

.plus_btn {
  height: 25px;
  width: 25px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  border: none;
  cursor: pointer;
  background-color: white;
  border-radius: 15px;
  color: #E76C1F;
  font-weight: bold;
  display: none;
}

.add_btn {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.plus_btn.visible {
  display: block;
}

.add_btn_clicked {
  background-image: none;
  background-color: white;
  height: 25px;
  margin-top: 12.5px;
  margin-bottom: 12.5px;
  border-radius: 15px;
  color: #E76C1F;
  font-weight: bold;
}

.add_btn_clicked:hover {
  background-image: none;
}

.add_amount_bsk {
  height: 25px;
  width: 25px;
  border: none;
  cursor: pointer;
  background-color: #FDEADC;
  border-radius: 15px;
  font-weight: bold;
}

.reduce_amount_bsk {
  height: 25px;
  width: 25px;
  border: none;
  cursor: pointer;
  background-color: #FDEADC;
  border-radius: 15px;
  font-weight: bold;
}

.show_delete_can {
  background-image: url(assets/icons/+.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.trash_icon {
  background-image: url("assets/img/delete_default.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: 18px 18px;
  background-color: #FDEADC;
}

.logo {
  position: absolute;
  left: 50%;
  top: 300px;
  transform: translateX(-50%);
}

.logo img {
  height: 200px;
  width: 200px;
}

.active {
  background-image: url("assets/icons/mobile/aktive/shopping_cart.png");
}

.buy_btn {
  width: 90%;
  height: 55px;
  border: none;
  border-radius: 30px;
  background-color: #E76C1F;
  color: white;
  font-size: 18px;
  font-weight: bold;
  cursor: pointer;
  transition: background-color 0.2s ease, transform 0.1s ease;
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 20px;
}

.buy_btn:active {
  transform: scale(0.97);
}

.empty_icon {
  margin: 25px;
}

.empty_icon img {
  height: 50px;
  width: auto;
}

.price {
  display: flex;
  justify-content: flex-end;
}

.order_confirmed {
  background-color: #363534;
  border-radius: 16px;
}

.order_confirmed_content {
  flex-direction: column;
  align-items: center;
  height: 150px;
  width: 250px;
  color: #FDEADC;
  display: flex;
  padding: 8px;
  overflow: hidden;
}

.order_confirmed img {
  height: 20px;
  width: 20px;
}

.close_btn {
  background-image: url(assets/img/close.png);
  height: 20px;
  width: 20px;
  background-repeat: no-repeat;
  background-position: center;
  background-color: #363534;
  border: none;
  align-self: flex-end;
}

.close_btn:hover {
  cursor: pointer;
}

.right_column {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  width: 400px;
}

.dish_img {
  padding: 10px;
}

.no-scroll {
  overflow: auto;
}

